@@ -591,6 +591,7 @@ All:
 - Add wxSocketBase::GetSocket() (Laurent Poujoulat).
 - Add IEEE 754 single/double precision support to wxDataStream classes (net147).
 - Add wxVector<>::const_reverse_iterator (troelsk).
+- Add wxTimer::StartOnce().
 - Add Nepali translation (Him Prasad Gautam).
 
 All (GUI):
